project(StreamingAPI)

file(GLOB STREAMING_API_HDR_FILES
	"${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
)

file(GLOB STREAMING_API_SRC_FILES
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cc"
)

add_library("${PROJECT_NAME}" STATIC
	"${STREAMING_API_HDR_FILES}"
	"${STREAMING_API_SRC_FILES}"
)
